Add sticky footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -147,6 +147,22 @@
             </div>
         </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <div>
+        <footer class="bd-footer footer-expand-md bg-dark footer-dark text-muted">
+            <div class="container-fluid p-3 p-md-5">
+            <ul class="bd-footer-links">
+                <li><a href="https://github.com/MalikDiop">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/malik-diop-1657a4131/">Linkedin</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+            <p>Copywright &copy; 2020 E. Diop TechBridge Student Developer</p>
+            </div>
+        </footer>
+    </div>
 
 
     
