--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
                 <li><a href="https://github.com/MalikDiop">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/malik-diop-1657a4131/">Linkedin</a></li>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="portofolio.html">Portfolio</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
             <p>Copywright &copy; 2020 E. Diop TechBridge Student Developer</p>
             </div>
