--- a/portfolio.html
+++ b/portfolio.html
@@ -34,18 +34,17 @@
         <h1 class="display-4"> About Me</h1>   
 
         <div class="row">
-            <div class="col-2"> 
-                <img class="img-fluid" src="images/blackwhite.jpeg" alt="Picture of me" class="scr">                
+            <div class="col-sm-2"> 
+                <img class="img-responsive" src="images/blackwhite.jpeg" alt="Picture of me" width="100%" class="scr">                
             </div>
-
-            <p class="col-12">Experienced Restaurant Specialist with a demonstrated history of working in the hospitality industry. Skilled in Food & Beverage, Hospitality Industry, MICROS, and Hospitality Management.</p>
+            <p class="col-xs-12">Experienced Restaurant Specialist with a demonstrated history of working in the hospitality industry. Skilled in Food & Beverage, Hospitality Industry, MICROS, and Hospitality Management.</p>
         </div>
         <div class="row justify-content-center bg-dark text-white">
             <h2>AREAS OF EXPERTISE</h2>
         </div>
 <br>
         <div class="row">
-            <div class="col-6">
+            <div class="col-md-6">
                 <ul>
                     <li class="font-weight-bold ">Implement Restaurants Service Standards</li>
                     <li class="font-weight-bold">Budgeting and Forecasting</li>
@@ -54,7 +53,7 @@
                     <li class="font-weight-bold">Human Resources policies and Procedures</li>
                 </ul>
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
                 <ul>
                     <li class="font-weight-bold ">Exceed Overall Operation Profitability</li>
                     <li class="font-weight-bold">Certify TIPS Trainer</li>
@@ -70,11 +69,11 @@
         </div>
 <br>
         <div class="row">
-            <div class="col-6">
+            <div class="col-lg-6">
                 <h2>HILTON TOWERS</h2>
                 <h4>Director of Restaurants</h4>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6">
                 <h4>Atlanta, GA</h4>
                 <h4>September 2016 to February 2020</h4>
             </div>
@@ -101,11 +100,11 @@
         <br>
         <br>
         <div class="row">
-            <div class="col-6">
+            <div class="col-lg-6">
                 <h2>TRADER VIC'S RESTAURANT</h2>
                 <h4>General Manager</h4>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6">
                 <h4>Atlanta, GA</h4>
                 <h4>December 2014 to September 2016</h4>
             </div>
@@ -127,10 +126,10 @@
         </div>
 <br>
         <div class="row">
-            <div class="col-6">
+            <div class="col-lg-6">
                 <h2>Web Developer</h2>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6">
                 <h5>TechBridge, Atlanta, GA</h5>
                 <h5>June 2020 to Present</h5>
             </div>
@@ -138,30 +137,75 @@
         <br>
         <br>
         <div class="row">
-            <div class="col-6">
+            <div class="col-md-6">
                 <h2>Computer Science</h2>
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
                 <h5>Georgia Perimeter College, Dunwoody, GA</h5>
                 <h5>Attended 2 years</h5>
             </div>
         </div>
-    </div>
-    <br>
-    <br>
-    <br>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-md-6">
+                <h2>Professional Development</h2>
+            </div>
+            <div class="col-md-6">
+                <h5>TIPS Certified Trainer</h5>
+                <h5>Georgia</h5>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-md-6">
+                <h2>Technology Skills</h2>
+            </div>
+        </div>
+            <br>
+            <div class="container font-weight-bold">
+                <div class="row">
+                    <div class="col-md-4">
+                        <ul>
+                            <li>Hotsos</li>
+                            <li>Guest Metric</li>
+                            <li>Inkscape</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <ul>
+                            <li>Propplan, Avero</li>
+                            <li>Photoshop</li>
+                            <li>Microsoft Office</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <ul>
+                            <li>Birtchstreet</li>
+                            <li>POS: MICROS, Agilysys, Springer-Millerp</li>
+                            <li>ADP Payroll / Unifocus</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        <br>
+        <br>
+        <br>
+        
     <div>
         <footer class="bd-footer footer-expand-md bg-dark footer-dark text-muted">
-            <div class="container-fluid p-3 p-md-5">
-            <ul class="bd-footer-links">
-                <li><a href="https://github.com/MalikDiop">GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/malik-diop-1657a4131/">Linkedin</a></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-            <p>Copywright &copy; 2020 E. Diop TechBridge Student Developer</p>
-            </div>
+    <div class="container-fluid p-3 p-md-5">
+        <ul class="bd-footer-links">
+            <li><a href="https://github.com/MalikDiop">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/malik-diop-1657a4131/">Linkedin</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <p>Copywright &copy; 2020 E. Diop TechBridge Student Developer</p>
+    </div>
         </footer>
+        
     </div>
 
 
